@@ -4,7 +4,8 @@ Changelog
 1.1.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix index of event sticky behavior.
+  [bsuttor]
 
 
 1.1.1 (2016-09-14)
